# tinyrefl

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py.in  CMakeLists.txt  Doxyfile  Doxyfile-mcss  LICENSE  README.md  appveyor.yml  ci.sh  clang-format  clang-format.hook  conanfile.py  ctest_setup.cmake  example.cpp  example.hpp  example.hpp.tinyrefl  externals.cmake  generate_dotcolor_coded.sh  run-clang-format.sh  stdlibcxx_checks.patch  tool.cpp  utils.cmake
ci/: ci.sh  ci_clang_format_check.sh  ci_conan_integration.sh  ci_test.sh  ci_user_integration.sh  generate_matrix.sh  gitlab-ci.yml  matrix.yml  run_job.sh
ci/docker/: Dockerfile  build.sh  build_toolchain.sh  install_boost.sh  pull.sh  set_host_compilers.sh  toolchain.cmake
ci/docker/clang-50-x86/: Dockerfile
ci/docker/clang-format/: Dockerfile
ci/docker/clang-format-ci/: Dockerfile
ci/docker/clang-format-container/: Dockerfile
ci/docker/gcc-5-armv7/: Dockerfile  toolchain.cmake
ci/docker/gcc-5-x86/: Dockerfile
ci/docker/gcc-6-armv7/: Dockerfile
ci/docker/gcc-6-x86/: Dockerfile
ci/docker/gcc-7-armv7/: Dockerfile  toolchain.cmake
ci/docker/gcc-7-x86/: Dockerfile
cmake/: CheckCXXConcepts.cmake  config.cmake  ctest_setup.cmake  externals.cmake  git.cmake  tinyrefl_tool-config.cmake  utils.cmake
docker/: build.sh
docker/clang-50/: Dockerfile
docker/gcc-5-armv7/: Dockerfile
docker/gcc-6-x86/: Dockerfile
docker/gcc-7-armv7/: Dockerfile
docs/docker/: Dockerfile  doxygen.sh  entrypoint.sh
examples/: CMakeLists.txt  api.cpp  boost.cpp  boost_fusion.cpp  boost_fusion.hpp  boost_hana.cpp  boost_hana.hpp  cli.cpp  cli.hpp  example.cpp  example.hpp  example2.cpp  example2.hpp  framework.hpp  hello_world.cpp  metastuff.cpp  metastuff.hpp  rttr.cpp  rttr.hpp  tinyrefl.jinja2
examples/user-project/: CMakeLists.txt  userapi.cpp  userapi.hpp  userapitests.cpp
include/tinyrefl/: api.hpp  backend.hpp  class_visitor.hpp  entities.hpp  matchers.hpp  object_visitor.hpp  tinyrefl.hpp  visitor.hpp
include/tinyrefl/backend/: backend.hpp  metadata.hpp  register_entity_macros.hpp
src/: CMakeLists.txt  check_constexpr_array_view_subscript.cpp  metadata_header.hpp  tinyrefl.cpp
src/utils/: demangle.cpp
test_package/: CMakeLists.txt  conanfile.py  example.hpp  main.cpp
tests/: CMakeLists.txt  api.cpp  catch.hpp  example.cpp  example.hpp  no_reflection.hpp
tests/api/: api.cpp
tests/static/: CMakeLists.txt  api.cpp  backend.cpp  generated_code.cpp  invokable_traits.cpp  members.hpp  static_test.hpp  strings.hpp  template_using_reflection.hpp
tool/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  driver.cmake  metadata_header.hpp  string_debugger.cpp  tool.cpp
tool/include/tinyrefl/tool/: argument_parser.hpp  ast_generator.hpp  container_entity_contents.hpp  diagnostic_reporter.hpp  entity_names.hpp  entity_registry.hpp  jinja2reflection.hpp  serializer.hpp  string_registry.hpp  type_visitor.hpp  unique_id.hpp  visitor.hpp
tool/include/tinyrefl/tool/backends/cppast/: astreporter.hpp  attribute.hpp  datareader.hpp  hierarchy.hpp  identifier.hpp  importer.hpp  parserdiagnosticslogger.hpp  serializer.hpp  source_location.hpp  type_visitor.hpp  visitor.hpp
tool/include/tinyrefl/tool/backends/legacy/: attribute_registry.hpp  entity_names.hpp  entity_registry.hpp  serializer.hpp
tool/include/tinyrefl/tool/backends/legacy/serializers/: entity_serializer.hpp  registration_serializer.hpp  sequence_serializer.hpp  type_serializer.hpp  value_serializer.hpp
tool/include/tinyrefl/tool/detail/: assert.hpp  logger.hpp
tool/include/tinyrefl/tool/exporters/: basic_exporter.hpp  generic.hpp  jinja2.hpp  json.hpp  protobuf_base64_binary.hpp  protobuf_binary.hpp  protobuf_text.hpp
tool/include/tinyrefl/tool/exporters/jinja2/: reflection.hpp
tool/include/tinyrefl/tool/model/: cppast_importer.hpp  entity.hpp  enum.hpp  exporter.hpp  id.hpp  importer.hpp  index.hpp  model.hpp  model.hpp.tinyrefl  schema.hpp  utils.hpp
tool/include/tinyrefl/tool/model/cppast/: attribute.hpp  class.hpp  common.hpp  enum.hpp  file.hpp  jinja2reflection.hpp  token.hpp
tool/include/tinyrefl/tool/serializers/: entity_serializer.hpp  registration_serializer.hpp  sequence_serializer.hpp  type_serializer.hpp  value_serializer.hpp
tool/lib/: CMakeLists.txt  argagg.hpp  argument_parser.cpp
tool/lib/detail/: CMakeLists.txt  logger.cpp
tool/lib/model/: CMakeLists.txt  enum.cpp
tool/lib/model/cppast/: class.cpp  enum.cpp  jinja2reflection.cpp  token.cpp
tool/src/: CMakeLists.txt  ast_generator.cpp  attribute_registry.cpp  diagnosticreporter.cpp  entity_names.cpp  entity_registry.cpp  serializer.cpp  unique_id.cpp  visitor.cpp
tool/src/backends/cppast/: astreporter.cpp  attribute.cpp  datareader.cpp  hierarchy.cpp  identifier.cpp  importer.cpp  parserdiagnosticslogger.cpp  source_location.cpp
tool/src/backends/legacy/: attribute_registry.cpp  entity_names.cpp  entity_registry.cpp  serializer.cpp
tool/src/backends/legacy/serializers/: entity_serializer.cpp  registration_serializer.cpp  type_serializer.cpp  value_serializer.cpp
tool/src/exporters/: basic_exporter.cpp  generic.cpp  jinja2.cpp  json.cpp  protobuf_base64_binary.cpp  protobuf_binary.cpp  protobuf_text.cpp
tool/src/exporters/detail/base64/: base64.cpp  base64.h
tool/src/exporters/jinja2/: reflection.cpp
tool/src/model/: CMakeLists.txt  ast.proto  entity.cpp  index.cpp  schema.cpp.in  utils.cpp
tool/src/model/cppast/: attribute.cpp  class.cpp  common.cpp  file.cpp  jinja2reflection.cpp
tool/src/serializers/: entity_serializer.cpp  registration_serializer.cpp  type_serializer.cpp  value_serializer.cpp
tool/templates/macro_based_codegen/: main.jinja  main.jinja2  model.jinja2
tool/test_package/: CMakeLists.txt  conanfile.py  example.hpp
tool/tests/: CMakeLists.txt  argument_parser.cpp  class.hpp  cppast_jinja2reflection.cpp  driver_handles_headers_in_different_dirs.cpp  jinja2reflection.cpp  main.cpp
tool/tests/templates/macro_based_codegen/: model.cpp
(+40 files in other folders)
